[project]
name = "agentic-fin-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "edgartools>=5.8.3",
    "fastapi>=0.128.0",
    "langchain>=1.2.2",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
